erDiagram
    tb_pessoa ||--o| tb_aluno : "e um"
    tb_pessoa ||--o| tb_funcionario : "e um"
    tb_departamento ||--o{ tb_funcionario : "possui"
    tb_cargo ||--o{ tb_funcionario : "possui"
    tb_funcionario ||--o| tb_professor : "vira"
    tb_professor ||--o{ tb_curso : "coordena"
    tb_curso ||--o{ tb_disciplina : "possui"
    tb_disciplina ||--o{ tb_turma : "oferta"
    tb_professor ||--o{ tb_turma : "leciona"
    tb_aluno ||--o{ tb_contrato : "assina"
    tb_curso ||--o{ tb_contrato : "referente"
    tb_contrato ||--o{ tb_mensalidade : "gera"
    tb_mensalidade ||--o{ tb_pagamento : "recebe"
    tb_aluno ||--o{ tb_matricula : "realiza"
    tb_turma ||--o{ tb_matricula : "contem"
    tb_matricula ||--o{ tb_nota : "recebe"
    tb_matricula ||--o{ tb_falta : "registra"

    dim_aluno ||--o{ fato_pagamento : "analisa"
    dim_curso ||--o{ fato_pagamento : "analisa"
    dim_unidade ||--o{ fato_pagamento : "analisa"
    dim_tempo ||--o{ fato_pagamento : "analisa"
